tests/spec/pass/go_struct_import.aja
import (
    "modules/person"
)

p = person.Person("Mio")
print(p.label("@"))
