tests/spec/fail/json_null_not_supported.aja
import (
    "json"
)

print(json.decode("null"))
